# AVNCodex-Indexer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  analyze_stats.py  compose.yaml  compose.yaml.example  debug_158858.json  debug_enrichment.py  debug_seed.py  docker-entrypoint.sh  inspect_json_specific.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 7223f63e5bb6_init.py
app/: database.py  logging_conf.py  main.py  models.py  settings.py
app/routers/: games.py
app/services/: f95_client.py  f95checker_client.py  game_service.py  rss_client.py  seed_service.py
data/: avn_index.db  test_real_filters.db  test_real_filters_v2.db
docs/: API Integration Plan.md  API_DATA_SAMPLES.md  API_REFERENCE.md  F95CHECKER_API_INTEGRATION.md  F95Checker_IDS.md  Local Indexer Implementation.md  TAG_IDS.md  test_commands.md
scripts/: debug_ids.py  debug_u4ia.py  generate_api_samples.py  inspect_api.py  inspect_tags.py  migrate_001_add_cover_url.py  test_client.py  test_db.py  test_docker.py  test_flow.py  test_search_filters_real.py  test_tracked.py  verify_api.py  verify_logs.py
tests/: conftest.py  test_auto_reset.py  test_cover_extraction.py  test_dynamic_reset.py  test_game_service_verification.py  test_last_update_logic.py  test_logging.py  test_migration.py  test_refactor_logic.py  test_search_freshness.py  test_search_ids.py  test_seed_logic.py  test_seed_persistence.py  test_seed_resume.py  test_seed_service.py  test_trivial.py  test_weighted_sort.py
