[project]
name = "avncodex-indexer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.0",
    "apscheduler>=3.11.1",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.124.4",
    "feedparser>=6.0.12",
    "lxml>=6.0.2",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
]
